# core-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.tmp  CLEANUP_STATUS_HANDOFF.md  COMPOSITION_GUIDE.md  CURL_VIOLATION_ANALYSIS.md  Cargo.toml  DUAL_MODE_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_CONTEXT.md  Makefile  Master Checklist.md  Master Codebase.md  OPTIMIZATION_GUIDE.md  POST_SESSION_VALIDATION.md  README.md  SESSION_HANDOFF.md  STANDARD_PROMPTS.md  TOOL_IDEAS.md  analyze_metrics.sh  build_all.sh  category_validation.rs  clippy_final.txt  clippy_output.txt  curl.sh  curl_comprehensive.sh  experiment_optimizations.sh  fix_spin_deps.sh  http_validation.sh  memory-workflow-guide.md  optimized-segments.md  server.sh  spin-minimal.toml  spin.toml  spin.toml.backup  test_api  test_api.rs  test_coordinates.json  (+5 more)
.agents/: LLM_STANDARD_LIBRARY_IMPLEMENTATION_PLAN.md
.claude/prompts/: tool-creation-checklist.md
.github/workflows/: build-and-publish.yml  build-and-test.yml  ci.yml  main-ci.yml  pr-checks.yml  pr-validation.yml  publish-tools.yml  release.yml  test-pr.yml  wkg-test.yml
coretools/: README.md
coretools/handler/: Cargo.toml
docs/: 3D_MATHEMATICS.md  COVERAGE.md  GEOSPATIAL.md  STATISTICS.md
pure_validation/: Cargo.toml
pure_validation/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/basic_math_types/: Cargo.toml
shared/basic_math_types/src/: lib.rs
src/: bearing_tool.rs  common.rs  dot_product_tool.rs  ftl_tools.rs.bak  lib.rs  lib_old.rs  single_tool.rs  stats_tool.rs
src/coordinate_utils/: coordinate_conversion.rs  mod.rs  validation.rs
src/geofencing/: buffer_zones.rs  mod.rs  point_in_polygon.rs  polygon_simplification.rs  proximity.rs
src/geospatial/: bearing.rs  distance.rs  polygon_area.rs
src/math_3d/: distance_operations.rs  line_intersection.rs  mod.rs  plane_operations.rs  primitives.rs  transformations.rs  vector_ops.rs  volume_calculations.rs
src/statistics/: correlation.rs  descriptive.rs  distribution.rs  mod.rs  regression.rs
src/tools/: mod.rs
src/tools/geospatial/: bearing.rs  mod.rs  polygon_area.rs
src/tools/math3d/: cross_product.rs  dot_product.rs  mod.rs
src/tools/statistics/: descriptive_stats.rs  mod.rs
test_scripts/: test_basic_math_new.sh  test_llm_standard_library.sh  test_server
tests/: integration_test.rs
tools/basic_math/add/: Cargo.toml
tools/basic_math/add/src/: lib.rs  logic.rs
tools/basic_math/distance_2d/: Cargo.toml
tools/basic_math/distance_2d/src/: lib.rs  lib_backup.rs  lib_http.rs  lib_simple.rs  logic.rs
tools/basic_math/divide/: Cargo.toml
tools/basic_math/modulo/: Cargo.toml
tools/basic_math/modulus/: Cargo.toml
tools/basic_math/multiply/: Cargo.toml
tools/basic_math/power/: Cargo.toml
tools/basic_math/pythagorean/: Cargo.toml
tools/basic_math/remainder/: Cargo.toml
tools/basic_math/sqrt/: Cargo.toml
tools/basic_math/sqrt/src/: lib.rs  logic.rs
tools/basic_math/square/: Cargo.toml
tools/basic_math/square/src/: lib.rs  logic.rs
tools/basic_math/subtract/: Cargo.toml
tools/categories/basic_math/: Cargo.toml
tools/categories/basic_math/src/: lib.rs
tools/crypto/hash_generator/: Cargo.toml
tools/crypto/hash_generator/src/: lib.rs  logic.rs
tools/data_formats/csv_parser/: Cargo.toml
tools/data_formats/json_formatter/: Cargo.toml
tools/data_formats/json_validator/: Cargo.toml
tools/data_formats/yaml_formatter/: Cargo.toml
tools/datetime/current_datetime/: Cargo.toml
tools/datetime/current_datetime/src/: lib.rs  logic.rs
tools/encoding/base64_decoder/: Cargo.toml
tools/encoding/base64_encoder/: Cargo.toml
tools/encoding/hex_decoder/: Cargo.toml
tools/encoding/hex_encoder/: Cargo.toml
tools/encoding/url_decoder/: Cargo.toml
tools/encoding/url_encoder/: Cargo.toml
tools/encoding/url_encoder/src/: lib.rs  logic.rs
tools/geospatial/bearing/: Cargo.toml
tools/geospatial/buffer_polygon/: Cargo.toml
tools/geospatial/coordinate_conversion/: Cargo.toml
tools/geospatial/coordinate_conversion/src/: lib.rs  logic.rs
tools/geospatial/distance/: Cargo.toml  README.md
tools/geospatial/distance/src/: lib.rs  logic.rs
tools/geospatial/point_in_polygon/: Cargo.toml
tools/geospatial/point_in_polygon/src/: lib.rs  logic.rs
tools/geospatial/polygon_area/: Cargo.toml
tools/geospatial/polygon_simplification/: Cargo.toml
tools/geospatial/proximity_search/: Cargo.toml
tools/geospatial/proximity_zone/: Cargo.toml
tools/identifiers/random_integer/: Cargo.toml
tools/identifiers/random_string/: Cargo.toml
tools/identifiers/uuid_generator/: Cargo.toml
tools/math3d/aabb_volume/: Cargo.toml  README.md
tools/math3d/arbitrary_rotation/: Cargo.toml  README.md
tools/math3d/cartesian_to_cylindrical/: Cargo.toml
tools/math3d/cartesian_to_spherical/: Cargo.toml  README.md
tools/math3d/cartesian_to_spherical/src/: lib.rs  logic.rs
tools/math3d/coordinate_conversion/: Cargo.toml  README.md
tools/math3d/cross_product/: Cargo.toml  README.md
tools/math3d/cylinder_ray_intersection/: Cargo.toml
tools/math3d/cylinder_volume/: Cargo.toml  README.md
tools/math3d/cylindrical_to_cartesian/: Cargo.toml
tools/math3d/dot_product/: Cargo.toml  README.md
tools/math3d/line_intersection/: Cargo.toml  README.md
tools/math3d/line_plane_intersection/: Cargo.toml
tools/math3d/line_segment_intersection/: Cargo.toml
tools/math3d/matrix_vector_multiply/: Cargo.toml  README.md
tools/math3d/multiple_line_intersection/: Cargo.toml
tools/math3d/plane_plane_intersection/: Cargo.toml  README.md
tools/math3d/point_line_distance/: Cargo.toml
tools/math3d/point_plane_distance/: Cargo.toml  README.md
tools/math3d/pyramid_volume/: Cargo.toml  README.md
tools/math3d/quaternion_from_axis_angle/: Cargo.toml  README.md
tools/math3d/quaternion_multiply/: Cargo.toml  (+1 more)
tools/math3d/spherical_to_cartesian/: Cargo.toml  README.md
tools/math3d/spherical_to_cartesian/src/: lib.rs  logic.rs
tools/statistics/predict_values/: Cargo.toml
tools/statistics/predict_values/src/: lib.rs  logic.rs
(+179 files in other folders)
