[package]
name = "coretools"
authors = ["Corey Ryan <corey@coreyr.com>"]
description = "MCP server for core computational tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
ftl-sdk = { version = "0.2.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
spin-sdk = "4.0"

[features]
default = ["distance"]
distance = []
bearing = []
dot_product = []

[workspace]
members = []
exclude = ["server", "tools/geospatial/distance", "tools/geospatial/bearing", "tools/math3d/dot_product", "tools/geospatial/polygon_area", "tools/geospatial/point_in_polygon", "tools/geospatial/coordinate_conversion", "tools/math3d/cross_product", "tools/math3d/vector_magnitude", "tools/math3d/line_intersection", "tools/geospatial/buffer_polygon", "tools/geospatial/proximity_search", "tools/geospatial/proximity_zone", "tools/basic_math/add", "tools/basic_math/multiply", "tools/basic_math/square", "tools/basic_math/sqrt", "tools/basic_math/pythagorean", "tools/basic_math/distance_2d", "tools/math3d/line_plane_intersection", "tools/math3d/plane_plane_intersection", "tools/math3d/point_plane_distance"]
