# Core Tools - Workspace Configuration
# This is a Cargo workspace containing all individual tool crates

[workspace]
resolver = "2"

# Include all tool directories as workspace members

members = [
    "tools/basic_math/add",
    "tools/basic_math/distance-two-d",
    "tools/basic_math/divide",
    "tools/basic_math/remainder",
    "tools/basic_math/modulus",
    "tools/basic_math/multiply",
    "tools/basic_math/power",
    "tools/basic_math/pythagorean",
    "tools/basic_math/sqrt",
    "tools/basic_math/square",
    "tools/basic_math/subtract",
    "tools/datetime/current_datetime",
    "tools/encoding/base64_decoder",
    "tools/encoding/base64_encoder",
    "tools/encoding/hex_decoder",
    "tools/encoding/hex_encoder",
    "tools/encoding/url_decoder",
    "tools/encoding/url_encoder",
    "tools/identifiers/random_integer",
    "tools/identifiers/random_string",
    "tools/identifiers/uuid_generator",
    "tools/geospatial/bearing",
    "tools/geospatial/buffer_polygon",
    "tools/geospatial/coordinate_conversion",
    "tools/geospatial/distance",
    "tools/geospatial/point_in_polygon",
    "tools/geospatial/polygon_area",
    "tools/geospatial/polygon_simplification",
    "tools/geospatial/proximity_search",
    "tools/geospatial/proximity_zone",
    "tools/math3d/aabb_volume",
    "tools/math3d/arbitrary_rotation",
    "tools/math3d/cartesian_to_spherical",
    "tools/math3d/coordinate_conversion",
    "tools/math3d/cross_product",
    "tools/math3d/cylinder_ray_intersection",
    "tools/math3d/cylinder_volume",
    "tools/math3d/dot_product",
    "tools/math3d/line_intersection",
    "tools/math3d/line_plane_intersection",
    "tools/math3d/line_segment_intersection",
    "tools/math3d/matrix_vector_multiply",
    "tools/math3d/multiple_line_intersection",
    "tools/math3d/plane_plane_intersection",
    "tools/math3d/point_line_distance",
    "tools/math3d/point_plane_distance",
    "tools/math3d/pyramid_volume",
    "tools/math3d/quaternion_from_axis_angle",
    "tools/math3d/quaternion_multiply",
    "tools/math3d/quaternion_slerp",
    "tools/math3d/ray_aabb_intersection",
    "tools/math3d/rotation_matrix",
    "tools/math3d/sphere_ray_intersection",
    "tools/math3d/sphere_sphere_intersection",
    "tools/math3d/sphere_volume",
    "tools/math3d/spherical_to_cartesian",
    "tools/math3d/cartesian_to_cylindrical",
    "tools/math3d/cylindrical_to_cartesian",
    "tools/math3d/tetrahedron_volume",
    "tools/math3d/vector_angle",
    "tools/math3d/vector_analysis",
    "tools/math3d/vector_magnitude",
    "tools/statistics/analyze_distribution",
    "tools/statistics/correlation_matrix",
    "tools/statistics/descriptive_statistics",
    "tools/statistics/histogram",
    "tools/statistics/linear_regression",
    "tools/statistics/pearson_correlation",
    "tools/statistics/polynomial_regression",
    "tools/statistics/predict_values",
    "tools/statistics/spearman_correlation",
    "tools/statistics/summary_statistics",
    "tools/statistics/test_normality",
    "tools/string/string_case_converter",
    "tools/string/string_trimmer",
    "tools/string/string_splitter",
    "tools/data_formats/json_formatter",
    "tools/data_formats/json_validator",
    "tools/validation/email_validator",
    "tools/crypto/hash_generator",
    "tools/validation/url_validator",
    "tools/validation/regex_matcher",
    "tools/data_formats/csv_parser",
    "tools/data_formats/yaml_formatter",
]

# This workspace doesn't have a default member package
# Individual tools are built separately using cargo build -p <package-name>


[profile.lean-wasm]
inherits = "release"  # Start with the same settings as release
lto = true
opt-level = 'z'
strip = true
codegen-units = 1

[profile.size-opt]
inherits = "release"
opt-level = 's'      # Optimize for size
lto = "fat"          # Maximum link-time optimization
strip = true
codegen-units = 1
panic = 'abort'

[profile.aggressive-opt]
inherits = "release"
opt-level = 'z'      # Aggressive size optimization
lto = "fat"
strip = true
codegen-units = 1
panic = 'abort'
overflow-checks = false

[profile.balanced-opt]
inherits = "release"
opt-level = 2        # Balance speed and size
lto = "thin"
strip = true
codegen-units = 1