[package]
name = "pure_validation"
version = "0.1.0"
edition = "2024"

[dependencies]
distance_2d_tool = { path = "../tools/basic_math/distance_2d", default-features = false, features = ["library"] }
divide_tool = { path = "../tools/basic_math/divide", default-features = false, features = ["library"] }
add_tool = { path = "../tools/basic_math/add", default-features = false, features = ["library"] }
multiply_tool = { path = "../tools/basic_math/multiply", default-features = false, features = ["library"] }
subtract_tool = { path = "../tools/basic_math/subtract", default-features = false, features = ["library"] }
power_tool = { path = "../tools/basic_math/power", default-features = false, features = ["library"] }
sqrt_tool = { path = "../tools/basic_math/sqrt", default-features = false, features = ["library"] }
tokio = { version = "1.0", features = ["full"] }
