[package]
name = "distance_2d_tool"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["individual"]
individual = ["ftl-sdk/macros", "spin-sdk"]
library = []

[dependencies]
ftl-sdk = { version = "0.2.3", features = ["macros"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
spin-sdk = { version = "4.0", optional = true }