[package]
name = "square_tool"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["individual"]
individual = ["ftl-sdk/macros", "spin-sdk"]
library = []

[dependencies]
ftl-sdk = { version = "0.2.3", features = ["macros"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
spin-sdk = { version = "4.0", optional = true }