[package]
name = "hash_generator_tool"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ftl-sdk = { version = "0.2.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
spin-sdk = "4.0"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.21"