[package]
name = "predict_values"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ftl-sdk = { version = "0.2.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
spin-sdk = "4.0"